--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "history": "^4.9.0",
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
